@@ -3,6 +3,7 @@ package App::Pocoirc::Status;
 use strict;
 use warnings FATAL => 'all';
 use Carp;
+use POE::Component::IRC::Common qw(irc_to_utf8 strip_color strip_formatting);
 use POE::Component::IRC::Plugin qw(PCI_EAT_NONE);
 
 sub new {
@@ -50,6 +51,14 @@ sub PCI_unregister {
     return 1;
 }
 
+sub _normalize {
+    my ($line) = @_;
+    $line = irc_to_utf8($line);
+    $line = strip_color($line);
+    $line = strip_formatting($line);
+    return $line;
+}
+
 sub S_connected {
     my ($self, $irc) = splice @_, 0, 2;
     my $address = ${ $_[0] };
@@ -68,7 +77,7 @@ sub S_disconnected {
 
 sub S_snotice {
     my ($self, $irc) = splice @_, 0, 2;
-    my $notice = ${ $_[0] };
+    my $notice = _normalize(${ $_[0] });
     $self->{Pocoirc}->_status("Event S_snotice", $irc, 'debug') if $self->{Trace};
     $self->{Pocoirc}->_status("Server notice: $notice", $irc);
     return PCI_EAT_NONE;
@@ -76,8 +85,8 @@ sub S_snotice {
 
 sub S_notice {
     my ($self, $irc) = splice @_, 0, 2;
-    my $sender = ${ $_[0] };
-    my $notice = ${ $_[2] };
+    my $sender = _normalize(${ $_[0] });
+    my $notice = _normalize(${ $_[2] });
 
     $self->{Pocoirc}->_status("Event S_notice", $irc, 'debug') if $self->{Trace};
     if (defined $irc->server_name() && $sender ne $irc->server_name()) {
@@ -107,8 +116,8 @@ sub S_identified {
 
 sub S_nick {
     my ($self, $irc) = splice @_, 0, 2;
-    my $user    = ${ $_[0] };
-    my $newnick = ${ $_[1] };
+    my $user    = _normalize(${ $_[0] });
+    my $newnick = _normalize(${ $_[1] });
     my $oldnick = (split /!/, $user)[0];
 
     $self->{Pocoirc}->_status("Event S_nick", $irc, 'debug') if $self->{Trace};
@@ -119,8 +128,8 @@ sub S_nick {
 
 sub S_join {
     my ($self, $irc) = splice @_, 0, 2;
-    my $user = ${ $_[0] };
-    my $chan = ${ $_[1] };
+    my $user = _normalize(${ $_[0] });
+    my $chan = _normalize(${ $_[1] });
     my $nick = (split /!/, $user)[0];
 
     $self->{Pocoirc}->_status("Event S_join", $irc, 'debug') if $self->{Trace};
@@ -131,9 +140,9 @@ sub S_join {
 
 sub S_part {
     my ($self, $irc) = splice @_, 0, 2;
-    my $user   = ${ $_[0] };
-    my $chan   = ${ $_[1] };
-    my $reason = ref $_[2] eq 'SCALAR' ? ${ $_[2] } : '';
+    my $user   = _normalize(${ $_[0] });
+    my $chan   = _normalize(${ $_[1] });
+    my $reason = ref $_[2] eq 'SCALAR' ? _normalize(${ $_[2] }) : '';
     my $nick   = (split /!/, $user)[0];
 
     $self->{Pocoirc}->_status("Event S_part", $irc, 'debug') if $self->{Trace};
@@ -146,10 +155,10 @@ sub S_part {
 
 sub S_kick {
     my ($self, $irc) = splice @_, 0, 2;
-    my $kicker = ${ $_[0] };
-    my $chan   = ${ $_[1] };
-    my $victim = ${ $_[2] };
-    my $reason = ${ $_[3] };
+    my $kicker = _normalize(${ $_[0] });
+    my $chan   = _normalize(${ $_[1] });
+    my $victim = _normalize(${ $_[2] });
+    my $reason = _normalize(${ $_[3] });
     $kicker    = (split /!/, $kicker)[0];
 
     $self->{Pocoirc}->_status("Event S_kick", $irc, 'debug') if $self->{Trace};
@@ -162,7 +171,7 @@ sub S_kick {
 
 sub S_error {
     my ($self, $irc) = splice @_, 0, 2;
-    my $error = ${ $_[0] };
+    my $error = _normalize(${ $_[0] });
     $self->{Pocoirc}->_status("Event S_error", $irc, 'debug') if $self->{Trace};
     $self->{Pocoirc}->_status("Error from IRC server: $error", $irc);
     return PCI_EAT_NONE;
@@ -170,8 +179,8 @@ sub S_error {
 
 sub S_quit {
     my ($self, $irc) = splice @_, 0, 2;
-    my $user   = ${ $_[0] };
-    my $reason = ${ $_[1] };
+    my $user   = _normalize(${ $_[0] });
+    my $reason = _normalize(${ $_[1] });
     my $nick   = (split /!/, $user)[0];
 
     $self->{Pocoirc}->_status("Event S_quit", $irc, 'debug') if $self->{Trace};
@@ -191,7 +200,7 @@ sub S_shutdown {
 
 sub S_socketerr {
     my ($self, $irc) = splice @_, 0, 2;
-    my $reason = ${ $_[0] };
+    my $reason = _normalize(${ $_[0] });
     $self->{Pocoirc}->_status("Event S_socketerr", $irc, 'debug') if $self->{Trace};
     $self->{Pocoirc}->_status("Failed to connect to server: $reason", $irc);
     return PCI_EAT_NONE;
@@ -199,7 +208,7 @@ sub S_socketerr {
 
 sub S_socks_failed {
     my ($self, $irc) = splice @_, 0, 2;
-    my $reason = ${ $_[0] };
+    my $reason = _normalize(${ $_[0] });
     $self->{Pocoirc}->_status("Event S_socks_failed", $irc, 'debug') if $self->{Trace};
     $self->{Pocoirc}->_status("Failed to connect to SOCKS server: $reason", $irc);
     return PCI_EAT_NONE;
@@ -215,7 +224,7 @@ sub S_socks_rejected {
 
 sub S_raw {
     my ($self, $irc) = splice @_, 0, 2;
-    my $raw = ${ $_[0] };
+    my $raw = _normalize(${ $_[0] });
     return PCI_EAT_NONE if !$self->{Verbose};
     $self->{Pocoirc}->_status("Raw: $raw", $irc, 'debug');
     return PCI_EAT_NONE;
